# bril

./: Makefile
assignments/: L2_intro_to_bril.org
assignments/L2/: L2.cpp  L2.out  L2.py  L2_v2.py  turnt.toml
assignments/opt/: CMakeLists.txt  Makefile  block.h  cfg.cpp  cfg.h  instruction.cpp  instruction.h  opt.cpp  x.json
examples/test/dom/: while.bril
examples/test/lvn_opt/: turnt.toml
examples/test/tdce_opt/: opt.toml
